--- a/11-MY451_A.rmd
+++ b/11-MY451_A.rmd
@@ -610,7 +610,8 @@ the level of measurement of some different variables.
 
 \clearpage
 
-### WEEK 3 class:\
+### WEEK 3 class
+
 Descriptive statistics for continuous variables
 
 **Data set:** The data file used today is
@@ -872,7 +873,7 @@ survey.
     used to carry out inference for comparisons of means between two
     *dependent* samples (c.f. Section \@ref(s-means-dependent)).
 
-**Classwork**\
+**Classwork**
 Consider the survey data in the file *ESS5\_GBFR.sav*. We will examine
 two variables, and carry out statistical inference to compare their
 means among the survey populations of adults in Great Britain and
